--- a/widget.ui
+++ b/widget.ui
@@ -17,13 +17,23 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>50</y>
+     <y>120</y>
      <width>241</width>
      <height>71</height>
     </rect>
    </property>
    <property name="text">
     <string>Beenden</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="edtEingabe">
+   <property name="geometry">
+    <rect>
+     <x>30</x>
+     <y>30</y>
+     <width>241</width>
+     <height>61</height>
+    </rect>
    </property>
   </widget>
  </widget>
