--- a/widget.ui
+++ b/widget.ui
@@ -18,8 +18,8 @@
     <rect>
      <x>30</x>
      <y>120</y>
-     <width>241</width>
-     <height>71</height>
+     <width>121</width>
+     <height>51</height>
     </rect>
    </property>
    <property name="text">
@@ -34,6 +34,19 @@
      <width>241</width>
      <height>61</height>
     </rect>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="btnAction">
+   <property name="geometry">
+    <rect>
+     <x>160</x>
+     <y>120</y>
+     <width>111</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Action!</string>
    </property>
   </widget>
  </widget>
