--- a/widget.ui
+++ b/widget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>301</width>
-    <height>216</height>
+    <height>268</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,7 +17,7 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>120</y>
+     <y>180</y>
      <width>121</width>
      <height>51</height>
     </rect>
@@ -39,14 +39,56 @@
   <widget class="QPushButton" name="btnAction">
    <property name="geometry">
     <rect>
-     <x>160</x>
-     <y>120</y>
-     <width>111</width>
+     <x>30</x>
+     <y>110</y>
+     <width>121</width>
      <height>51</height>
     </rect>
    </property>
    <property name="text">
     <string>Action!</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="btnAddSensor">
+   <property name="geometry">
+    <rect>
+     <x>160</x>
+     <y>180</y>
+     <width>111</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Sensor hinzufügen</string>
+   </property>
+  </widget>
+  <widget class="QRadioButton" name="btnTemperatur">
+   <property name="geometry">
+    <rect>
+     <x>170</x>
+     <y>110</y>
+     <width>91</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Temperatur</string>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QRadioButton" name="btnFeuchte">
+   <property name="geometry">
+    <rect>
+     <x>170</x>
+     <y>140</y>
+     <width>91</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Feuchte</string>
    </property>
   </widget>
  </widget>
